--- a/package.json
+++ b/package.json
@@ -1,30 +1,45 @@
 {
-  "name": "rsbuild-project",
-  "version": "1.0.0",
-  "private": true,
-  "type": "module",
+  "name": "fastest",
+  "version": "0.1.0",
   "scripts": {
-    "build": "rsbuild build",
-    "check": "biome check --write",
-    "dev": "rsbuild dev",
-    "format": "prettier --write .",
-    "preview": "rsbuild preview"
+    "reset": "npx rimraf node_modules ./**/node_modules",
+    "dev": "modern dev",
+    "build": "modern build",
+    "start": "modern start",
+    "serve": "modern serve",
+    "new": "modern new",
+    "lint": "biome check",
+    "prepare": "simple-git-hooks",
+    "upgrade": "modern upgrade"
+  },
+  "engines": {
+    "node": ">=16.18.1"
+  },
+  "lint-staged": {
+    "*.{js,ts,cjs,mjs,d.cts,d.mts,jsx,tsx,json,jsonc}": [
+      "biome check --files-ignore-unknown=true"
+    ]
+  },
+  "simple-git-hooks": {
+    "pre-commit": "npx lint-staged"
   },
   "dependencies": {
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "react-redux": "^9.2.0",
-    "react-router-dom": "^7.5.3",
-    "redux": "^5.0.1"
+    "@modern-js/runtime": "2.67.4",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
-    "@biomejs/biome": "^1.9.4",
-    "@rsbuild/core": "^1.3.1",
-    "@rsbuild/plugin-react": "^1.1.1",
-    "@types/node": "^22.15.3",
-    "@types/react": "^19.1.0",
-    "@types/react-dom": "^19.1.1",
-    "prettier": "^3.5.3",
-    "typescript": "^5.8.2"
-  }
+    "@modern-js/app-tools": "2.67.4",
+    "@modern-js/tsconfig": "2.67.4",
+    "@biomejs/biome": "1.9.4",
+    "typescript": "~5.7.3",
+    "@types/jest": "~29.2.4",
+    "@types/node": "~18.11.9",
+    "@types/react": "^18.3.11",
+    "@types/react-dom": "~18.3.1",
+    "lint-staged": "~15.4.0",
+    "simple-git-hooks": "^2.11.1",
+    "rimraf": "^6.0.1"
+  },
+  "packageManager": "pnpm@10.10.0+sha512.d615db246fe70f25dcfea6d8d73dee782ce23e2245e3c4f6f888249fb568149318637dca73c2c5c8ef2a4ca0d5657fb9567188bfab47f566d1ee6ce987815c39"
 }
