--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,29 +1,14 @@
 {
+  "extends": "@modern-js/tsconfig/base",
   "compilerOptions": {
-    "target": "ES2020",
-    "module": "ES2020",
-    // ✅ 重点：必须是支持 import.meta 的值
-    "jsx": "react-jsx",
-    "moduleResolution": "bundler",
-    // 或 node
-    "esModuleInterop": true,
-    "allowSyntheticDefaultImports": true,
-    "resolveJsonModule": true,
-    "strict": true,
-    "baseUrl": ".",
+    "declaration": false,
+    "jsx": "preserve",
+    "baseUrl": "./",
     "paths": {
-      "@/*": [
-        "src/*"
-      ]
-    },
-    //    "types": ["vite/client"] // 或 ["bun-types", "vite/client"] 根据你用的工具
-    "types": [
-      "vite/client",
-      "node"
-    ]
+      "@/*": ["./src/*"],
+      "@shared/*": ["./shared/*"]
+    }
   },
-  "include": [
-    "src",
-    "fastest"
-  ]
+  "include": ["src", "shared", "config", "modern.config.ts"],
+  "exclude": ["**/node_modules"]
 }
