feat: 添加全局加载功能及样式优化
- 新增 `GlobalLoading` 组件及加载插件，实现应用启动时的全局加载动画。
- 添加 `injectAppLoading` 插件并配置加载提示样式和行为。
- 引入 `@modern-js/plugin-router-v7` 和 `@rsbuild/core` 依赖，支持路由和构建优化。
- 新增全局样式文件（`main.css` 和 `Home/index.css`），优化页面布局和视觉效果。
- 添加 `icon.svg` 资源文件及 `public/inject-loading.js`，增强加载动画效果。
- 配置 `modern.config.ts`，调整模块解析和运行时插件。
- 更新 `tsconfig.json` 和 `pnpm-workspace.yaml`，完善项目配置。

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,9 @@
 {
   "extends": "@modern-js/tsconfig/base",
   "compilerOptions": {
+    "module": "esnext",
+    "target": "es2020",
+    "moduleResolution": "node",
     "declaration": false,
     "jsx": "preserve",
     "baseUrl": "./",
