--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "prepare": "simple-git-hooks",
     "upgrade": "modern upgrade"
   },
+  "type": "module",
   "engines": {
     "node": ">=16.18.1"
   },
@@ -24,22 +25,24 @@
     "pre-commit": "npx lint-staged"
   },
   "dependencies": {
+    "@modern-js/plugin-router-v7": "^2.67.4",
     "@modern-js/runtime": "2.67.4",
+    "@rsbuild/core": "^1.3.17",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
+    "@biomejs/biome": "1.9.4",
     "@modern-js/app-tools": "2.67.4",
     "@modern-js/tsconfig": "2.67.4",
-    "@biomejs/biome": "1.9.4",
-    "typescript": "~5.7.3",
     "@types/jest": "~29.2.4",
     "@types/node": "~18.11.9",
     "@types/react": "^18.3.11",
     "@types/react-dom": "~18.3.1",
     "lint-staged": "~15.4.0",
+    "rimraf": "^6.0.1",
     "simple-git-hooks": "^2.11.1",
-    "rimraf": "^6.0.1"
+    "typescript": "~5.7.3"
   },
   "packageManager": "pnpm@10.10.0+sha512.d615db246fe70f25dcfea6d8d73dee782ce23e2245e3c4f6f888249fb568149318637dca73c2c5c8ef2a4ca0d5657fb9567188bfab47f566d1ee6ce987815c39"
 }
